# SBC

./: LDR.c  LDR.h  README.md  app_main.c  time_reference.c  time_reference.h  tof.c  tof.h  tof_test.c  ultrasonico.c
App/mapito/: settings.gradle
App/mapito/app/: build.gradle
App/mapito/app/src/main/: AndroidManifest.xml
App/mapito/app/src/main/res/layout/: activity_main.xml
App/mapito/app/src/main/res/menu/: menu_main.xml
App/mapito/app/src/main/res/navigation/: nav_graph.xml
App/mapito/app/src/main/res/values/: strings.xml  themes.xml
App/mapito/app/src/main/res/values-night/: themes.xml
App/mapito/gradle/wrapper/: gradle-wrapper.properties
App/mapito12/: settings.gradle
App/mapito12/app/: build.gradle
App/mapito12/app/src/main/: AndroidManifest.xml
App/mapito12/app/src/main/res/drawable/: custom_round_button.xml  custom_round_button_blue.xml  mapito_logo.xml  ripple_blue_button.xml  ripple_red_button.xml
App/mapito12/app/src/main/res/layout/: activity_main.xml
App/mapito12/app/src/main/res/values-night/: themes.xml
App/mapito12/gradle/wrapper/: gradle-wrapper.properties
ESP32/main/: CMakeLists.txt  main.c
ESP32/main/data_structures/: data_structures.h
ESP32/main/networks/: mqtt_publisher.c  mqtt_publisher.h  tcp_client.c  tcp_client.h
ESP32/main/sensors/: motors_controller.c  motors_controller.h  tof.c  tof.h  tof_controller.c  tof_controller.h  ultrasonico_controller.c  ultrasonico_controller.h
ESP32/main/utilities/: time_reference.c
Link Server/java/: Communicator.java  Server.java
Simulation/: movimiento.cs
(+13 files in other folders)
